@@ -38,7 +38,7 @@
  * RETURNS:	pointer to a freshly malloced string that contains the
  *		requested text or NULL if the text could not be read.
  */
-void read_textual_leaf(raw1394handle_t handle, nodeid_t node, octlet_t offset,
+int read_textual_leaf(raw1394handle_t handle, nodeid_t node, octlet_t offset,
     rom1394_directory *dir) 
 {
 	int i, length;
@@ -55,7 +55,7 @@ void read_textual_leaf(raw1394handle_t handle, nodeid_t node, octlet_t offset,
 
 	if (length<=0 || length > 256) {
 	    WARN(node, "invalid number of textual leaves", offset);
-	    return;
+	    return -1;
 	}
 
 	QUADINC(offset);
@@ -103,9 +103,10 @@ void read_textual_leaf(raw1394handle_t handle, nodeid_t node, octlet_t offset,
 	s[i] = '\0';
     DEBUG( node, "textual leaf is: (%s)\n", s);
 	dir->textual_leafs[dir->nr_textual_leafs++] = s;
+	return 0;
 }
 
-void proc_directory (raw1394handle_t handle, nodeid_t node, octlet_t offset,
+int proc_directory (raw1394handle_t handle, nodeid_t node, octlet_t offset,
     rom1394_directory *dir)
 {
 	int		length, i, key, value;
@@ -115,50 +116,55 @@ void proc_directory (raw1394handle_t handle, nodeid_t node, octlet_t offset,
 	selfdir = offset;
 
     QUADREADERR(handle, node, offset, &quadlet);
-	quadlet = htonl(quadlet);
-	length = quadlet>>16;
-
-    DEBUG(node, "directory has %d entries\n", length);
-	for (i=0; i<length; i++) {
-		QUADINC(offset);
-		QUADREADERR(handle, node, offset, &quadlet);
-		quadlet = htonl(quadlet);
-		key = quadlet>>24;
-		value = quadlet&0x00FFFFFF;
-        DEBUG(node, "key/value: %08x/%08x\n", key, value);
-		switch (key) {
-			case 0x0C:
-				dir->node_capabilities = value;
-				break;
-			case 0x03:
-				dir->vendor_id = value;
-				break;
-			case 0x12:
-				dir->unit_spec_id = value;
-				break;
-			case 0x13:
-				dir->unit_sw_version = value;
-				break;
-			case 0x17:
-				dir->model_id = value;
-				break;
-			case 0x81:
-			case 0x82:
-				read_textual_leaf( handle, node, offset + value * 4, dir);
-				break;
-			case 0xC3:
-			case 0xC7:
-			case 0xD1:
-			case 0xD4:
-			case 0xD8:
-				subdir = offset + value*4;
-				if (subdir > selfdir) {
-					proc_directory( handle, node, subdir, dir);
-				} else {
-					FAIL(node, "unit directory with back reference");
-				}
-				break;
-		}
-	}
+    if (cooked1394_read(handle, (nodeid_t) 0xffc0 | node, offset, sizeof(quadlet_t), &quadlet) < 0) {
+        FAIL( node, "invalid root directory length");
+    } else {
+        quadlet = htonl(quadlet);
+    	length = quadlet>>16;
+    
+        DEBUG(node, "directory has %d entries\n", length);
+    	for (i=0; i<length; i++) {
+    		QUADINC(offset);
+    		QUADREADERR(handle, node, offset, &quadlet);
+    		quadlet = htonl(quadlet);
+    		key = quadlet>>24;
+    		value = quadlet&0x00FFFFFF;
+            DEBUG(node, "key/value: %08x/%08x\n", key, value);
+    		switch (key) {
+    			case 0x0C:
+    				dir->node_capabilities = value;
+    				break;
+    			case 0x03:
+    				dir->vendor_id = value;
+    				break;
+    			case 0x12:
+    				dir->unit_spec_id = value;
+    				break;
+    			case 0x13:
+    				dir->unit_sw_version = value;
+    				break;
+    			case 0x17:
+    				dir->model_id = value;
+    				break;
+    			case 0x81:
+    			case 0x82:
+    				read_textual_leaf( handle, node, offset + value * 4, dir);
+    				break;
+    			case 0xC3:
+    			case 0xC7:
+    			case 0xD1:
+    			case 0xD4:
+    			case 0xD8:
+    				subdir = offset + value*4;
+    				if (subdir > selfdir) {
+    					proc_directory( handle, node, subdir, dir);
+    				} else {
+    					FAIL(node, "unit directory with back reference");
+    				}
+    				break;
+    		}
+    	}
+    }
+    return 0;
 }
 
